force-app/main/default/objects/Product2/fields/Any__c.field-meta.xml
<CustomField>
    <fullName>Any__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any</label>
    <type>Checkbox</type>
</CustomField>