force-app/main/default/objects/Product2/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block</label>
    <type>Checkbox</type>
</CustomField>