force-app/main/default/objects/Product2/fields/Bollards__c.field-meta.xml
<CustomField>
    <fullName>Bollards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bollards</label>
    <type>Checkbox</type>
</CustomField>