force-app/main/default/objects/Product2/fields/Concrete_Apron__c.field-meta.xml
<CustomField>
    <fullName>Concrete_Apron__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concrete Apron</label>
    <type>Checkbox</type>
</CustomField>