force-app/main/default/objects/Product2/fields/Concrete_Curb__c.field-meta.xml
<CustomField>
    <fullName>Concrete_Curb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concrete Curb</label>
    <type>Checkbox</type>
</CustomField>