force-app/main/default/objects/Product2/fields/Concrete_Footings__c.field-meta.xml
<CustomField>
    <fullName>Concrete_Footings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concrete Footings</label>
    <type>Checkbox</type>
</CustomField>