force-app/main/default/objects/Product2/fields/Concrete_Foundation__c.field-meta.xml
<CustomField>
    <fullName>Concrete_Foundation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concrete Foundation</label>
    <type>Checkbox</type>
</CustomField>