force-app/main/default/objects/Product2/fields/Concrete_Sidewalk__c.field-meta.xml
<CustomField>
    <fullName>Concrete_Sidewalk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concrete Sidewalk</label>
    <type>Checkbox</type>
</CustomField>