force-app/main/default/objects/Product2/fields/Concrete_Slab__c.field-meta.xml
<CustomField>
    <fullName>Concrete_Slab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concrete Slab</label>
    <type>Checkbox</type>
</CustomField>