force-app/main/default/objects/Product2/fields/Concrete_Stairs__c.field-meta.xml
<CustomField>
    <fullName>Concrete_Stairs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concrete Stairs</label>
    <type>Checkbox</type>
</CustomField>