force-app/main/default/objects/Product2/fields/Demolition__c.field-meta.xml
<CustomField>
    <fullName>Demolition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demolition</label>
    <type>Checkbox</type>
</CustomField>