force-app/main/default/objects/Product2/fields/Excavation__c.field-meta.xml
<CustomField>
    <fullName>Excavation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excavation</label>
    <type>Checkbox</type>
</CustomField>