force-app/main/default/objects/Product2/fields/Grading__c.field-meta.xml
<CustomField>
    <fullName>Grading__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grading</label>
    <type>Checkbox</type>
</CustomField>