force-app/main/default/objects/Product2/fields/Interior_Slab_Trenching__c.field-meta.xml
<CustomField>
    <fullName>Interior_Slab_Trenching__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interior Slab Trenching</label>
    <type>Checkbox</type>
</CustomField>