force-app/main/default/objects/Product2/fields/Internal_Description__c.field-meta.xml
<CustomField>
    <fullName>Internal_Description__c</fullName>
    <label>Internal Description</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>