force-app/main/default/objects/Product2/fields/Is_a_Main_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Main_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used for product filter</description>
    <label>Pay Item</label>
    <type>Checkbox</type>
</CustomField>