force-app/main/default/objects/Product2/fields/Krow__Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Billing_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Type</label>
    <referenceTo>Krow__Billing_Type__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>