force-app/main/default/objects/Product2/fields/Line_Detail_Template__c.field-meta.xml
<CustomField>
    <fullName>Line_Detail_Template__c</fullName>
    <label>Line Detail Template</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>