force-app/main/default/objects/Product2/fields/NonCPQ_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>NonCPQ_Sort_Order__c</fullName>
    <label>NonCPQ Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>