force-app/main/default/objects/Product2/fields/Product_Used_For__c.field-meta.xml
<CustomField>
    <fullName>Product_Used_For__c</fullName>
    <description>used for filtering</description>
    <label>Product Used For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>gplvs_Main_Services</valueSetName>
    </valueSet>
</CustomField>