force-app/main/default/objects/Product2/fields/Quantity_Scale__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Scale__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity Scale</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>