force-app/main/default/objects/Product2/fields/Quote_Line_Item_Section__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item_Section__c</fullName>
    <label>Quote Line Item Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Quote_Line_Item_Section</valueSetName>
    </valueSet>
</CustomField>