force-app/main/default/objects/Product2/fields/Retaining_Wall__c.field-meta.xml
<CustomField>
    <fullName>Retaining_Wall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retaining Wall</label>
    <type>Checkbox</type>
</CustomField>