force-app/main/default/objects/Product2/fields/Standard_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Standard_Unit_of_Measure__c</fullName>
    <label>Standard Unit of Measure</label>
    <length>100</length>
    <type>Text</type>
</CustomField>