force-app/main/default/objects/Product2/fields/Temp_for_General_Sales__c.field-meta.xml
<CustomField>
    <fullName>Temp_for_General_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temp for General Sales</label>
    <type>Checkbox</type>
</CustomField>