force-app/main/default/objects/Product2/fields/txtUsedFor__c.field-meta.xml
<CustomField>
    <fullName>txtUsedFor__c</fullName>
    <formula>IF( Any__c = true,&quot;Any;&quot;,&quot;&quot;) &amp;
IF( Block__c= true,&quot;Block;&quot;,&quot;&quot;) &amp;
IF( Bollards__c= true,&quot;Bollards;&quot;,&quot;&quot;) &amp;
IF( Concrete_Apron__c= true,&quot;Concrete Apron;&quot;,&quot;&quot;) &amp;
IF( Concrete_Curb__c= true,&quot;Concrete Curb;&quot;,&quot;&quot;) &amp;
IF( Concrete_Footings__c= true,&quot;Concrete Footings;&quot;,&quot;&quot;) &amp;
IF( Concrete_Foundation__c= true,&quot;Concrete Foundation;&quot;,&quot;&quot;) &amp;
IF( Concrete_Sidewalk__c= true,&quot;Concrete Sidewalk;&quot;,&quot;&quot;) &amp;
IF( Concrete_Slab__c= true,&quot;Concrete Slab;&quot;,&quot;&quot;) &amp;
IF( Concrete_Stairs__c= true,&quot;Concrete Stairs;&quot;,&quot;&quot;) &amp;
IF( Demolition__c= true,&quot;Demolition;&quot;,&quot;&quot;) &amp;
IF( Excavation__c= true,&quot;Excavation;&quot;,&quot;&quot;) &amp;
IF( Grading__c= true,&quot;Grading;&quot;,&quot;&quot;) &amp;
IF( Interior_Slab_Trenching__c= true,&quot;Interior Slab Trenching;&quot;,&quot;&quot;) &amp;
IF( Retaining_Wall__c= true,&quot;Retaining Wall;&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>txtUsedFor</label>
    <type>Text</type>
</CustomField>