force-app/main/default/objects/Product2/listViews/All_Main_Products.listView-meta.xml
<ListView>
    <fullName>All_Main_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>NonCPQ_Sort_Order__c</columns>
    <columns>Standard_Unit_of_Measure__c</columns>
    <columns>Internal_Description__c</columns>
    <columns>txtUsedFor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_a_Main_Product__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Pay Items</label>
</ListView>